# evolution

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  a.out  bench  bindings.dart  bindings.sh  ffigen.sh  tests.dart  tests.sh
cmake/: interactor.cmake
core/: .gitignore  CMakeLists.txt  ffigen.dart  ffigen.sh
core/dart/: analysis_options.yaml  pubspec.yaml
core/dart/lib/: core.dart
core/native/: CMakeLists.txt  core.c  core_test  system_dart.c  system_dart.h
core/native/arrays/: pointer.h
core/native/bindings/: bindings.c  core.c
core/native/bits/: bits.h
core/native/bootstrap/: bootstrap.c  bootstrap.h
core/native/collections/: maps.c  maps.h
core/native/common/: common.h  constants.h  library.h
core/native/configuration/: configuration.h
core/native/context/: context.c  context.h
core/native/core/: core.c  core.h  module.c  module.h
core/native/crash/: crash.c  crash.h
core/native/dart/: dart.c  dart.h  dart_api.h  dart_embedder_api.h  dart_tools_api.h
core/native/descriptors/: descriptors.c  descriptors.h
core/native/errors/: error.c  error.h
core/native/events/: event.c  event.h  events.h  field.c  field.h
core/native/hashing/: hasher.c  hasher.h  hashing.h  hashing_32.h  hashing_64.h  hashing_murmur32.h  hashing_polymur.h  hashing_wyhash.h  hashing_xxhash.h  murmur32.c  murmur32.h  polymur.h  wyhash.h  wyhash32.h  xxhash.h
core/native/include/: core.h  core_common.h  errors.h  system_native.h
core/native/lists/: linked.h
core/native/maps/: simple.h  table.h
core/native/modules/: module.h  modules.h
core/native/numbers/: numbers.h
core/native/output/: core
core/native/panic/: panic.h
core/native/printer/: printer.h
core/native/stacktrace/: stacktrace.cc  stacktrace.h
core/native/strings/: format.h
core/native/system/: library.h  signal.h  socket.h  system.c  system.h  time.h  types.h
core/native/time/: time.h
executor/: CMakeLists.txt
executor/dart/: pubspec.yaml
executor/dart/lib/: executor.dart  mediator.dart
executor/native/: CMakeLists.txt  executor_background_scheduler.c  executor_background_scheduler.h  executor_common.h  executor_dart.c  executor_native.c
executor/native/dart/: analyze_snapshot_api.h  dart_api_dl.h  dart_native_api.h
executor/native/executor/: bindings.c  common.h  configuration.h  constants.h  errors.h  executor.c  executor.h  executor_common.h  executor_configuration.h  executor_task.h  module.c  module.h  task.h
executor/native/include/: executor.h  executor_common.h  executor_configuration.h  executor_constants.h  executor_dart.h  executor_message.h  executor_native.h  executor_task.h
executor/native/scheduler/: executor_scheduler.c  executor_scheduler.h  scheduler.c  scheduler.h
executor/test/dart/: pubspec.yaml
executor/test/native/: CMakeLists.txt  test.c  test.h  test_call.c  test_call.h  test_threading.c  test_threading.h
interactor/: CMakeLists.txt  ffigen.dart
interactor/dart/: pubspec.yaml
interactor/dart/lib/: interactor.dart  linux_interactor.dart
interactor/native/: CMakeLists.txt  interactor_collections.h  interactor_common.h  interactor_dart.c  interactor_dart.h  interactor_native.c
interactor/native/collections/: mhash.h
interactor/native/include/: interactor_configuration.h  interactor_constants.h  interactor_data_pool.h  interactor_io_buffers.h  interactor_memory.h  interactor_message.h  interactor_messages_pool.h  interactor_native.h  interactor_native_common.h  interactor_payload_pool.h  interactor_static_buffers.h
interactor/test/dart/: pubspec.yaml
interactor/test/native/: CMakeLists.txt  test.c  test.h  test_call.c  test_call.h  test_threading.c  test_threading.h
mediator/: CMakeLists.txt  ffigen.dart
mediator/dart/: pubspec.yaml
mediator/dart/lib/: mediator.dart
mediator/native/: CMakeLists.txt  mediator_collections.h  mediator_common.h  mediator_dart.c  mediator_dart.h  mediator_dart_notifier.c  mediator_dart_notifier.h  mediator_native.c
mediator/native/include/: mediator_configuration.h  mediator_constants.h  mediator_dart.h  mediator_message.h  mediator_native.h
mediator/test/dart/: pubspec.yaml
mediator/test/native/: CMakeLists.txt  test.c  test.h  test_call.c  test_call.h  test_threading.c  test_threading.h
memory/: CMakeLists.txt  ffigen.dart
memory/dart/: ffigen.sh  pubspec.yaml
memory/dart/lib/: memory.dart
memory/dart/test/: test.dart
memory/native/: CMakeLists.txt  memory_dart.c  memory_dart.h  memory_native.c  tuple_dart.c  tuple_dart.h
memory/native/bindings/: memory.c  memory.h  tuple.c  tuple.h
memory/native/buffers/: memory_io_buffers.h  memory_static_buffers.h
memory/native/common/: common.h
memory/native/include/: memory.h  memory_buffers.h  memory_configuration.h  memory_data_pool.h  memory_io_buffers.h  memory_message.h  memory_messages_pool.h  memory_module.h  memory_native_common.h  memory_payload_pool.h  memory_small_data.h  memory_static_buffers.h  memory_structure_pool.h
memory/native/memory/: bindings.c  configuration.h  constants.h  errors.h  io_buffers.h  memory.h  memory_configuration.h  module.c  module.h  static_buffers.h  tuple.h
memory/native/state/: memory_state.c  memory_state.h
memory/test/: pubspec.yaml  test.dart
storage/: .gitignore  CMakeLists.txt  ffigen.dart  ffigen.sh
storage/dart/: analysis_options.yaml  pubspec.yaml  test.lua
storage/native/: CMakeLists.txt
storage/test/: crud.dart  data.dart  lua.dart  pubspec.yaml  replica.dart  schema.dart  test.dart
transport/: CMakeLists.txt  ffigen.dart  tests.sh
transport/dart/: analysis_options.yaml  pubspec.yaml
transport/native/: CMakeLists.txt  Makefile  transport.c  transport.h  transport_buffers_pool.h  transport_client.c  transport_client.h  transport_collections.c  transport_collections.h  transport_common.h  transport_constants.h  transport_file.c  transport_file.h  transport_server.c  transport_server.h  transport_socket.c  transport_socket.h
transport/test/: benchmark.dart  buffers.dart  bulk.dart  file.dart  pubspec.yaml  shutdown.dart  tcp.dart  test.dart  timeout.dart  unix.dart
(+411 files in other folders)
